--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,5 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
-/CFICoinUpdater/output.log
-/CFICoinUpdater/config.json
+/CoinUpdater/output.log
+/CoinUpdater/config.json
