--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~7.0",
-        "symfony/thanks": "^1.0"
+        "symfony/thanks": "^1.0",
+        "laravel/installer": "~1.5.0"
     },
     "autoload": {
         "classmap": [
